--- a/MajorHelp/templates/base.html
+++ b/MajorHelp/templates/base.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="{% static 'css/login/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/signup/signup.css' %}">
     <link rel="stylesheet" href="{% static 'css/settings/settings.css' %}">
+    <link rel="stylesheet" href="{% static 'css/email/email.css' %}">
 
-
-    <link rel="stylesheet" href="{% block stylesheet %}{% static 'css/styles.css' %}{% endblock %}">
+    {% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'css/common/styles.css' %}">
+    {% endblock %}
     {# for use in script overriding #}
     {% block script %}{% endblock script %}
 
