--- a/MajorHelp/templates/registration/login.html
+++ b/MajorHelp/templates/registration/login.html
@@ -9,23 +9,43 @@
         <h2>Login</h2>
         <form method="post" class="login-form">
             {% csrf_token %}
+            
+            <!-- Username Field -->
             <div class="input-group">
                 {{ form.username.label_tag }}
                 {{ form.username }}
                 {{ form.username.errors }}
             </div>
+
+            <!-- Password Field with Show/Hide Button -->
             <div class="input-group">
                 {{ form.password.label_tag }}
-                {{ form.password }}
+                <div class="password-wrapper">
+                    {{ form.password }}
+                    <button type="button" id="toggle-password" class="toggle-password">Show Password</button>
+                </div>
                 {{ form.password.errors }}
             </div>
+
+            <!-- Remember Me Checkbox with Proper Alignment -->
+            <div class="input-group remember-me">
+                <input type="checkbox" name="remember_me" id="remember_me">
+                <label for="remember_me">Remember Me</label>
+            </div>            
+
+            <!-- Login Button -->
             <button type="submit" class="btn">Login</button>
         </form>
 
+        <!-- Login Links -->
         <div class="login-links">
             <p>Don't have an account? <a href="{% url 'MajorHelp:signup' %}">Sign up here</a></p>
             <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
         </div>
     </div>
 </div>
+
+<!-- Link JavaScript -->
+<script src="{% static 'js/script.js' %}"></script>
+
 {% endblock %}
